# cfdi-vault-mx

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
db/migration/: V1__initial_postgresql_schema.sql  V2__evidence_query_indexes.sql
docs/: README.md  architecture.md  branching-policy.md  case-study.md  ci-test-policy.md  devx.md  learning-log.md  parser-version-matrix.md  product-archetype.md  recovery-v2.md  sdd.md  security-model.md  setup.md  storage-design.md  work-items.yaml  work-orchestration.md
docs/adr/: 0001-local-first.md  0002-recovery-v2-rabbitmq-redis-postgres.md
docs/api/: sat-download-public-api.md  sat-v15-public-api.md
docs/config/: README.md
docs/foundation/: README.md  architecture-blueprint.md  cache-coordination-contract.md  cli-help-design.md  cli-ux-design.md  data-and-accounting-model.md  database-queue-api-contract.md  delegation-plan.md  flows-and-states.md  infrastructure-boundary.md  installer-design.md  module-responsibilities.md  open-questions.md  product-scope.md  queue-reliability-contract.md  recovery-pipeline.md  reference-system-scope.md  storage-and-retention.md  user-stories.md  workstream-ownership.md
docs/installer/: local-installer-alpha.md  onboarding.md
docs/planning/: README.md  agile-operating-model.md  architecture-execution-plan.md  backlog.md  cli-command-parity-report.md  cli-family-refactor-plan.md  cli-refactor-merge-synchronization-plan.md  cli-refactor-review-strategy.md  governance.md  implementation-master-plan.md  living-system-plan.md  sprint-0-execution.md  sprint-0-review-findings.md  sprint-3-sat-contract-orchestration.md  sprint-4-secret-custody-boundary.md  sprint-5-windows-secret-adapter.md  sprint-roadmap.md  team-board.md
docs/release/: library-compliance-audit-plan.md  library-compliance-audit-report.md  library-quality-contract.md  library-scope.md  public-api.md  python-package-plan.md
docs/releases/: v0.1.0-offline-beta.md  v0.1.1-offline-beta-hardening.md
docs/sat-download/: README.md  async-verify-scheduler.md  auth-security.md  examples.md  implementation-plan.md  manual-sat-runbook.md  metadata-first-reconciliation.md  official-vs-observed.md  offline-local-operations.md  reconciliation-architecture.md  request-model.md  requirements.md  service-flow.md  source-policy.md  sources.md  statuses-limits-errors.md  user-facing-errors.md  v1_5_checklist.md  verify-post-probe.md
docs/security/: e-firma-custody-threat-model.md  local-secret-operations.md  windows-credential-manager-boundary.md
docs/testing/: README.md  fixture-policy.md
docs/waves/: wave-3-plan.md
examples/: README.md
examples/config/: local-dev-dummy.json
examples/synthetic-cfdi/: invoice-credit-note.xml  invoice-expense.xml  invoice-income.xml
scripts/: bootstrap_local.ps1  check_branch_policy.py  check_ci_policy.py  install.ps1  scan_sat_context.py  scan_sensitive_fixtures.py  work_orchestrator.py
skills/cfdi-library-quality/: SKILL.md
src/cfdi_vault/: __init__.py  cache.py  cache_contract.py  cache_recovery.py  cfdi_parser.py  cli.py  config.py  db.py  domain.py  evidence_queries.py  fake_sat.py  live_permit.py  metadata_parser.py  object_storage.py  onboarding.py  package_processor.py  parser.py  ports.py  queue_contract.py  queue_safety.py  queueing.py  reconciliation.py  recovery_db.py  recovery_service.py  sat_async_verify.py  sat_auth.py  sat_auth_constants.py  sat_auth_contract.py  sat_auth_endpoints.py  sat_auth_envelope_lint.py  sat_auth_http.py  sat_auth_matrix_probe.py  sat_auth_oracle.py  sat_auth_post_probe.py  (+32 more)
tests/: README.md  __init__.py  conftest.py  rabbitmq_fakes.py  test_abandoned_job_recovery.py  test_branch_policy.py  test_cache_contract.py  test_cfdi_parser.py  test_ci_policy.py  test_cli_download.py  test_cli_help.py  test_cli_secret_commands.py  test_cli_setup.py  test_cli_storage.py  test_cli_storage_commands.py  test_cli_transport_probe.py  test_config.py  test_domain.py  test_download_request_orchestrator.py  test_evidence_queries.py  test_flyway_migration.py  test_import.py  test_in_memory_cache_contract.py  test_in_memory_queue_reliability.py  test_live_permit.py  test_metadata_parser.py  test_object_storage.py  test_onboarding.py  test_package_processor.py  test_packaging_alpha.py  test_parser.py  test_parser_version_matrix.py  test_queue_contract.py  test_rabbitmq_integration.py  test_rabbitmq_publish.py  test_rabbitmq_retry.py  test_reconciliation.py  test_recovery_abandoned.py  test_recovery_service.py  test_redis_cache_contract.py  (+43 more)
(+21 files in other folders)
