[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "cfdi-vault-mx"
version = "0.1.0"
description = "Local-first architecture lab for synthetic Mexican CFDI/XML data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "CFDI Vault MX Lab" }]
dependencies = [
    "rich>=13.7,<14.0",
    "signxml>=5.0,<6.0",
    "SQLAlchemy>=2.0,<3.0",
    "typer>=0.16,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]
infra = [
    "pika>=1.3,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "redis>=5.0,<6.0",
]

[project.scripts]
cfdi-vault = "cfdi_vault.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/cfdi_vault"]
