[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "cfdi-vault-mx"
version = "0.1.0"
description = "Development-stage Python library and CLI tools for fake/offline-first SAT CFDI recovery."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "CFDI Vault MX Lab" }]
keywords = ["cfdi", "sat", "mexico", "invoices", "cli", "reconciliation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "cryptography>=45.0,<46.0",
    "rich>=13.7,<14.0",
    "signxml>=5.0,<6.0",
    "psycopg[binary]>=3.1,<4.0",
    "SQLAlchemy>=2.0,<3.0",
    "typer>=0.16,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.12,<1.0",
]
infra = [
    "pika>=1.3,<2.0",
    "redis>=5.0,<6.0",
]
object-storage = [
    "boto3>=1.34,<2.0",
]
release = [
    "build>=1.2,<2.0",
    "twine>=5.0,<7.0",
]

[project.urls]
Repository = "https://github.com/Crls8a/cfdi-vault-mx"
Issues = "https://github.com/Crls8a/cfdi-vault-mx/issues"
Documentation = "https://github.com/Crls8a/cfdi-vault-mx/tree/main/docs"

[project.scripts]
cfdi-vault = "cfdi_vault.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests requiring real local integration services",
    "container: tests requiring Docker containers or docker compose services",
    "external: tests requiring external network services",
    "live: tests that call real external/live systems such as SAT",
    "slow: tests too expensive for default pull-request CI",
    "ci: tests intended for default GitHub CI",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/cfdi_vault"]
